# evidentry

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/portfolio/: EXECUTION_PLAN.md  PORTFOLIO_PLAN.md
evidentry/: __init__.py  cli.py  config.py  evidence.py  ingest.py  judges.py  providers.py  report.py  runner.py  stats.py
evidentry/mappings/: sr-26-2.yaml
examples/credit_memo_summarizer/: dataset_accuracy.jsonl  dataset_numeric.jsonl  dataset_refusal.jsonl  evidentry.yaml
examples/judged_faithfulness/: README.md  dataset_faithfulness.jsonl  evidentry.yaml
examples/model_history/: _generate.py  dataset_accuracy.jsonl  dataset_refusal.jsonl
examples/model_history/v1.0.0/: dataset_completeness.jsonl  evidentry.yaml  outputs.jsonl  providence.yaml
examples/model_history/v1.1.0/: dataset_accuracy.jsonl  dataset_tone.jsonl  evidentry.yaml  outputs.jsonl  providence.yaml
examples/model_history/v1.2.0/: dataset_completeness.jsonl  dataset_refusal.jsonl  evidentry.yaml  outputs.jsonl  providence.yaml
providence/: __init__.py  cli.py  config.py  evidence.py  ingest.py  metrics.py  providers.py  report.py  runner.py
providence/mappings/: eu-ai-act-annex-iv.yaml  sr-26-2.yaml
schema/: README.md  results.schema.json
tests/: test_cli_gate.py  test_config.py  test_evidence.py  test_export.py  test_ingest.py  test_judges.py  test_metrics.py  test_report.py  test_runner.py  test_schema.py  test_statistical_options.py  test_stats.py
(+33 files in other folders)
