[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "evidentry"
version = "0.3.0"
description = "Turn LLM eval runs into auditable evidence packs with defensible statistics (optional SR 26-2 / EU AI Act mappings)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Alejandro Lizardi" },
  { name = "John Dryden" },
]
keywords = [
  "llm", "evals", "model-risk", "sr-26-2", "ai-governance",
  "validation", "compliance", "evidence",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Financial and Insurance Industry",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
# Dev-only: validating results.json against schema/results.schema.json. The
# library and its core tests stay pure-stdlib (plus pyyaml); the schema test
# skips when jsonschema is absent.
dev = ["jsonschema>=4.0"]

[project.scripts]
evidentry = "evidentry.cli:main"

[project.urls]
Homepage = "https://github.com/alejlizardi/evidentry"

[tool.setuptools.packages.find]
include = ["evidentry*"]

[tool.setuptools.package-data]
evidentry = ["mappings/*.yaml"]
